# axum-handle-error-slow-compile

./: Cargo.toml  README.md
src/: main.rs
